# meshtest

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.ci-test  Dockerfile.leader  Dockerfile.leader.gobuild  Dockerfile.node  Dockerfile.node.gobuild  Makefile  README.md  compose.yml  entrypoint.sh  go.mod  node.py  pyproject.toml  register.py  start.sh
.github/workflows/: ci.yml  docker-publish.yml
.planning/: COMPREHENSIVE-REVIEW.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v0.1-MILESTONE-AUDIT.md  v0.11-MILESTONE-AUDIT.md  v0.2-MILESTONE-AUDIT.md  v0.4-MILESTONE-AUDIT.md  v0.5-MILESTONE-AUDIT.md  v0.7-MILESTONE-AUDIT.md  v0.8-INTEGRATION.md  v0.8-MILESTONE-AUDIT.md  v0.9-MILESTONE-AUDIT.md
.planning/milestones/: v0.1-ROADMAP.md  v0.10-MILESTONE-AUDIT.md  v0.10-REQUIREMENTS.md  v0.10-ROADMAP.md  v0.10.1-MILESTONE-AUDIT.md  v0.10.1-REQUIREMENTS.md  v0.10.1-ROADMAP.md  v0.11-REQUIREMENTS.md  v0.11-ROADMAP.md  v0.2-REQUIREMENTS.md  v0.2-ROADMAP.md  v0.4-REQUIREMENTS.md  v0.4-ROADMAP.md  v0.5-REQUIREMENTS.md  v0.5-ROADMAP.md  v0.7-ROADMAP.md  v0.9-REQUIREMENTS.md  v0.9-ROADMAP.md
.planning/phases/: 01-02-PLAN.md  (+19 more)
deploy/: install.sh
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mesh_status/: __init__.py  __main__.py  config.py  dashboard.py  leader.py  models.py  persistence.py  status.py
spec/: conftest.py  test_integration.py
tests/: conftest.py  test_dashboard.py  test_data_api.py  test_leader_integration.py  test_node_integration.py  test_persistence.py  test_status.py
(+119 files in other folders)
