[project]
name = "mesh-status"
version = "0.1.0"
description = "Distributed mesh connectivity testing tool"
requires-python = ">=3.12"
dependencies = [
    "quart>=0.20.0",
    "hypercorn>=0.18.0",
    "quart-cors>=0.8.0",
    "aiofiles>=24.1.0",
    "httpx>=0.28.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
